--- a/src/styles/Social.css
+++ b/src/styles/Social.css
@@ -11,7 +11,6 @@ ul {
   .social-list {
     flex-direction: row;
     gap: 15px;
-    justify-content: flex-end;
     margin-top: 0;
   }
 }
